--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Coding with Diego
-description: Lear to progrma in Python
+description: Learn how to program with Python
